examples/invalid/undefined_variable_reference_in_request.reqlang
```%request
GET {{:base_url}} HTTP/1.1
```
